@@ -1,4 +1,3 @@
 @echo off
-mkdir default_backup
-java -jar ./jars/Client.jar localhost 2000
+java --module-path ./javafx/lib --add-modules javafx.controls,javafx.fxml -jar ./jars/Client.jar localhost 2000
 pause
